--- a/Web/app1/templates/user_list.html
+++ b/Web/app1/templates/user_list.html
@@ -49,7 +49,7 @@
               <td>{{ row.phonenum }}</td>
               <td>
                 <a
-                  href="/users/change/?nid={{row.id}}&name={{row.name}}&password={{row.password}}&phonenum={{row.phonenum}}"
+                  href="/users/{{row.id}}/edit/"
                   class="layui-btn layui-btn-sm"
                   >编辑</a
                 >
