--- a/Web/app1/templates/login.html
+++ b/Web/app1/templates/login.html
@@ -2,61 +2,54 @@
 
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>智慧村落管理系统</title>
-</head>
-<link rel="SHORTCUT ICON" href="{% static 'imgs/default.png' %} ">
-<link rel="stylesheet" href="{% static 'layui/css/layui.css' %}"/>
-<script src="{% static 'js/jquery-3.3.1.min.js' %} "></script>
+  </head>
+  <link rel="SHORTCUT ICON" href="{% static 'imgs/default.png' %} " />
+  <link rel="stylesheet" href="{% static 'layui/css/layui.css' %}" />
+  <script src="{% static 'js/jquery-3.3.1.min.js' %} "></script>
 
-<style>
+  <style>
     body {
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-        background-attachment: fixed;
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+      background-attachment: fixed;
     }
+  </style>
 
-</style>
-
-<body background="/static/img/loginBG.jpg">
-
-<div class="layui-card layui-main" style="width: 420px; margin: 300px auto;">
-    <div class="layui-card-header">初始账号 root 密码 123</div>
-    <div class="layui-card-body">
+  <body background="/static/img/loginBG.jpg">
+    <div class="layui-card layui-main" style="width: 420px; margin: 300px auto">
+      <div class="layui-card-header">初始账号 root 密码 123</div>
+      <div class="layui-card-body">
         <form class="layui-form" method="post">
-            {% csrf_token %}
-            <div class="layui-form-item layui-row">
-                <label class="layui-form-label">账号</label>
-                <div class="layui-input-inline">
-                    <input type="text" name="user" required lay-verify="required" placeholder="请输入账号"
-                           autocomplete="off"
-                           class="layui-input" id="user">
-                </div>
+          {% csrf_token %}
+          <div class="layui-form-item layui-row">
+            <label class="layui-form-label">账号</label>
+            <div class="layui-input-inline">{{form.name}}</div>
+            <span>{{forms.name.errors.0}}</span>
+          </div>
+          <div class="layui-form-item layui-row">
+            <label class="layui-form-label">密码</label>
+            <div class="layui-input-inline">{{form.password}}</div>
+            <span>{{forms.password.errors}}</span>
+          </div>
+          <div class="layui-form-item layui-row">
+            <div class="layui-input-block">
+              <button
+                id="login_btn"
+                class="layui-btn layui-btn-normal layui-col-md8"
+                lay-submit
+              >
+                登录
+              </button>
             </div>
-            <div class="layui-form-item layui-row">
-                <label class="layui-form-label">密码</label>
-                <div class="layui-input-inline">
-                    <input type="password" name="pwd" required lay-verify="required" placeholder="请输入密码"
-                           autocomplete="off"
-                           class="layui-input" id="pwd">
-                </div>
-            </div>
-            <div class="layui-form-item layui-row">
-                <div class="layui-input-block">
-                    <button id="login_btn" class="layui-btn layui-btn-normal layui-col-md8" lay-submit>登录
-                    </button>
-                </div>
-            </div>
-            <div class="layui-row" style="color: red; text-align: center;">
-                {{ msg }}
-            </div>
+          </div>
+          <div class="layui-row" style="color: red; text-align: center">
+            {{ msg }}
+          </div>
         </form>
-
+      </div>
     </div>
-</div>
-
-</body>
-
+  </body>
 </html>
-
