--- a/Web/app1/templates/layout.html
+++ b/Web/app1/templates/layout.html
@@ -170,7 +170,7 @@
               <dl class="layui-nav-child">
                 <dd><a href="/meeting">视频</a></dd>
                 <dd><a href="/users">人员管理</a></dd>
-                <dd><a href="/chat">消息</a></dd>
+                <dd><a href="/chat_list">消息</a></dd>
               </dl>
             </li>
           </ul>
