--- a/Web/app1/templates/member_list.html
+++ b/Web/app1/templates/member_list.html
@@ -21,9 +21,7 @@
 <div class="right-t-body">
   <div class="layui-row">
     <div class="layui-card layui-col-md6" style="margin: 20px">
-      <div class="layui-card-header">
-        用户管理
-      </div>
+      <div class="layui-card-header">用户管理</div>
       <div class="layui-card-body" style="padding: 0">
         <table class="layui-table" style="margin: 0">
           <thead>
@@ -41,7 +39,9 @@
               <td>{{ row.name }}</td>
               <td>{{ row.phonenum }}</td>
               <td>
-                <a href="" class="layui-btn layui-btn-sm">发送消息</a>
+                <a href="/chat/{{row.id}}/send" class="layui-btn layui-btn-sm"
+                  >发送消息</a
+                >
               </td>
             </tr>
             {% endfor %}
