--- a/Web/app1/templates/layout2.html
+++ b/Web/app1/templates/layout2.html
@@ -4,7 +4,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>贲集村管理系统</title>
+    <title>蒋庄村管理系统</title>
     <link rel="shortcut icon" href="{% static 'imgs/default.png' %} " />
 
     <link
@@ -105,7 +105,7 @@
             line-height: 60px;
             margin-left: 20px;
           "
-          >贲集村管理系统</span
+          >蒋庄村管理系统</span
         >
       </div>
       <!-- 头部区域 -->
@@ -184,22 +184,22 @@
             <li class="layui-nav-item">
               <a href="javascript:;">派发指令</a>
               <dl class="layui-nav-child">
-                <dd><a href="/member">发送消息</a></dd>
-                <dd><a href="/chat_list">收信箱</a></dd>
+                <dd><a href="/member2">发送消息</a></dd>
+                <dd><a href="/chat_list2">收信箱</a></dd>
               </dl>
             </li>
             <li class="layui-nav-item">
               <a href="javascript:;">其他功能</a>
               <dl class="layui-nav-child">
                 <dd><a href="/meeting">视频</a></dd>
-                <dd><a href="/users">人员管理</a></dd>
+                <dd><a href="/users2">人员管理</a></dd>
               </dl>
             </li>
             <li class="layui-nav-item">
               <a href="javascript:;">工单列表</a>
               <dl class="layui-nav-child">
-                <dd><a href="/workorder/add">新建工单</a></dd>
-                <dd><a href="/workorder/list">工单列表</a></dd>
+                <dd><a href="/workorder2/add">新建工单</a></dd>
+                <dd><a href="/workorder2/list">工单列表</a></dd>
               </dl>
             </li>
           </ul>
