--- a/Web/app1/templates/member_list2.html
+++ b/Web/app1/templates/member_list2.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %} {% block content %}
+{% extends 'layout2.html' %} {% block content %}
 
 <div class="layui-card-one">
   <!--用户访问路径追踪-->
@@ -10,7 +10,7 @@
   >
     <!--判断是否是最后一层路径，最后一层为不可选中-->
 
-    <a style="text-decoration: none" href="/index">首页</a
+    <a style="text-decoration: none" href="/index2">首页</a
     ><span lay-separator="">/</span>
 
     <!--判断是否是最后一层路径，最后一层为不可选中-->
