添加了工单处理及处理记录查看

--- a/Web/app1/templates/chat2.html
+++ b/Web/app1/templates/chat2.html
@@ -8,7 +8,7 @@
     lay-filter="breadcrumb"
     style="visibility: visible"
   >
-    <a style="text-decoration: none" href="/index">首页</a
+    <a style="text-decoration: none" href="/index2">首页</a
     ><span lay-separator="">/</span>
   </div>
 </div>
