--- a/Web/app1/templates/workorder_handle.html
+++ b/Web/app1/templates/workorder_handle.html
@@ -16,7 +16,7 @@
 <div class="right-t-body">
   <div class="layui-card" style="margin: 5px">
     <div class="layui-card-body">
-      <div class="layui-card-header">收件人：{{recipient_name}}</div>
+      <div class="layui-card-header"></div>
       <form class="layui-form" method="post">
               {% csrf_token %}
 
