--- a/Web/app1/templates/workorder_list.html
+++ b/Web/app1/templates/workorder_list.html
@@ -56,8 +56,9 @@
 
               <td>
                 <a href="" class="layui-btn layui-btn-sm">查看</a>
-                <a href="" class="layui-btn layui-btn-sm layui-btn-danger"
-                  >审批</a
+                <a href="/workorder/{{i.id}}/record" class="layui-btn layui-btn-sm">处理记录</a>
+                <a href="/workorder/{{i.id}}/handle" class="layui-btn layui-btn-sm layui-btn-danger"
+                  >处理</a
                 >
               </td>
             </tr>
