--- a/Web/app1/templates/workorder_list2.html
+++ b/Web/app1/templates/workorder_list2.html
@@ -10,7 +10,7 @@
   >
     <!--判断是否是最后一层路径，最后一层为不可选中-->
 
-    <a style="text-decoration: none" href="/index">首页</a
+    <a style="text-decoration: none" href="/index2">首页</a
     ><span lay-separator="">/</span>
 
     <!--判断是否是最后一层路径，最后一层为不可选中-->
@@ -55,10 +55,12 @@
               <td>{{ i.village }}</td>
 
               <td>
-                <a href="" class="layui-btn layui-btn-sm">查看</a>
-                <a href="" class="layui-btn layui-btn-sm layui-btn-danger"
-                  >审批</a
+                <a href="" class="layui-btn layui-btn-sm">查看内容</a>
+                <a href="/workorder2/{{i.id}}/record" class="layui-btn layui-btn-sm">处理记录</a>
+                <a href="/workorder2/{{i.id}}/handle" class="layui-btn layui-btn-sm layui-btn-danger"
+                  >处理</a
                 >
+
               </td>
             </tr>
             {% endfor %}
