--- a/Web/app1/templates/workorder_handle2.html
+++ b/Web/app1/templates/workorder_handle2.html
@@ -21,7 +21,7 @@
               {% csrf_token %}
 
 
-        {% for field in post_form %}
+        {% for field in form %}
         <div class="layui-form-item layui-form-text">
           <label class="layui-form-label">{{field.label}}</label>
           <div class="layui-input-block">{{field}}</div>
