--- a/Web/app1/templates/layout.html
+++ b/Web/app1/templates/layout.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{% static 'rbac/css/rbac.css' %} " />
 
     <link rel="stylesheet" href="{% static 'layui/css/layui.css' %}" />
-    <script src="{% static '/layui/layui.js' %}"></script>
+    <script src="{% static 'layui/layui.js' %}"></script>
 
     <style>
         #map{
@@ -209,17 +209,35 @@
       <div class="right-body">{% block content %}{% endblock %}</div>
     </div>
     <script src="{% static 'js/jquery-3.3.1.min.js' %} "></script>
-
     <script src="{% static 'rbac/js/rbac.js' %} "></script>
     <!--某些单独的页面需要用自己的js-->
 
     <script>
+      var DELETE_ID;
       layui.use('element', function () {
         var element = layui.element
       })
       layui.use('form', function () {
         var form = layui.form
       })
+      layui.use('layer', function() {
+        var layer = layui.layer;
+        $(".delete-btn").click(function(){
+          DELETE_ID = $(this).attr("uid");
+          DELETE_URL = "/users/delete/?nid="+DELETE_ID;
+          console.log(DELETE_ID);
+          layer.open({
+            title: ['温馨提示'],
+            content: '请确认删除，您的数据将会被清除！',
+            btn: ['确定', '取消'],
+            shadeClose: true,
+            //回调函数
+            yes: function(index, layero){
+              self.location=DELETE_URL;//确定按钮跳转地址
+           },
+            })
+      })})
+      
     </script>
 
     {% block js %} {% endblock %}
