--- a/Web/app1/templates/user_list.html
+++ b/Web/app1/templates/user_list.html
@@ -15,21 +15,29 @@
 
     <!--判断是否是最后一层路径，最后一层为不可选中-->
 
-    <a style="text-decoration: none"><cite>用户列表</cite></a>
+    <a style="text-decoration: none" href="/users"><cite>用户列表</cite></a>
+    <div style="float:right">
+      <form method="get">
+        <div class="layui-input-inline">
+          <input type="text" name="q" lay-verify="required" placeholder="搜索" autocomplete="off" class="layui-input">
+        </div>
+        <button type="submit" class="layui-btn layui-btn-sm"><i class="layui-icon"></i></button>
+      </form>
+    </div>
   </div>
 </div>
 <div class="right-t-body">
+
   <div class="layui-row">
     <div class="layui-card layui-col-md6" style="margin: 20px">
       <div class="layui-card-header">
         用户管理
         <div style="float: right">
-          <!--因为rbac的urls有上级urls所以 ，反向生成url的方法如下-->
           <a class="layui-btn layui-btn-sm" href="/users/add">
-            <!--反向生成url-->
             <i class="fa fa-plus-square" aria-hidden="true"></i> 添加角色
           </a>
         </div>
+        
       </div>
       <div class="layui-card-body" style="padding: 0">
         <table class="layui-table" style="margin: 0">
