--- a/Web/app1/templates/user_list2.html
+++ b/Web/app1/templates/user_list2.html
@@ -15,7 +15,15 @@
 
     <!--判断是否是最后一层路径，最后一层为不可选中-->
 
-    <a style="text-decoration: none"><cite>用户列表</cite></a>
+    <a style="text-decoration: none" href="/users2"><cite>用户列表</cite></a>
+    <div style="float:right">
+      <form method="get">
+        <div class="layui-input-inline">
+          <input type="text" name="q" lay-verify="required" placeholder="搜索" autocomplete="off" class="layui-input">
+        </div>
+        <button type="submit" class="layui-btn layui-btn-sm"><i class="layui-icon"></i></button>
+      </form>
+    </div>
   </div>
 </div>
 <div class="right-t-body">
@@ -24,9 +32,7 @@
       <div class="layui-card-header">
         用户管理
         <div style="float: right">
-          <!--因为rbac的urls有上级urls所以 ，反向生成url的方法如下-->
           <a class="layui-btn layui-btn-sm" href="/users/add">
-            <!--反向生成url-->
             <i class="fa fa-plus-square" aria-hidden="true"></i> 添加角色
           </a>
         </div>
